# audio-multiplexer

./: .clang-format  .clang-tidy  CMakeLists.txt
src/: main.cpp  multiplexer.cpp  multiplexer.hpp
